--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <title>Página de Login</title>
 </head>
-<body>
+<body class="corpo">
     <div class="main-login">
         <div class="left-login"><h1>Bem vindo ao nosso time! <br>Faça Login agora mesmo.</h1>
         <img class="left-login-image" src="gato-astronauta.svg" alt="Gato Astronauta Imagem">
