--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Página de Login</title>
 </head>
-<body class="corpo">
+<body>
     <div class="main-login">
         <div class="left-login"><h1>Bem vindo ao nosso time! <br>Faça Login agora mesmo.</h1>
         <img class="left-login-image" src="gato-astronauta.svg" alt="Gato Astronauta Imagem">
