Commit Show Pass
Commit do botão visibility password

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Página de Login</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+     <script src="main.js"></script>
 </head>
 <body>
     <div class="main-login">
@@ -21,9 +24,12 @@
                 </div>
                 <div class="text-field">
                     <label for="senha">Senha</label>
-                    <input type="password" name="senha" placeholder="Senha">
-                </div>               
+                    <input type="password" name="senha" placeholder="Senha" id="senha">
+                    <span class="material-icons" id="password-visivel" onclick="mostrarSenha(this)">visibility_off</span>
+
+                </div>        
                  <button class="btn-login">Entrar</button>
+                 <p class="text-singup">Ainda não tem uma conta? <a href="#">Cadastre-se</a> agora!</p>
             </div>
         </div>
     </div>
