--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <span class="material-icons" id="password-visivel" onclick="mostrarSenha(this)">visibility_off</span>
 
                 </div>        
-                 <button class="btn-login">Entrar</button>
-                 <p class="text-singup">Ainda não tem uma conta? <a href="#">Cadastre-se</a> agora!</p>
+                 <button class="btn-login"><a href="singup.html">Entrar</a></button>
+                 <p class="text-singup">Ainda não tem uma conta? <a href="singup.html">Cadastre-se</a> agora!</p>
             </div>
         </div>
     </div>
