--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <span class="material-icons" id="password-visivel" onclick="mostrarSenha(this)">visibility_off</span>
 
                 </div>        
-                 <button class="btn-login"><a href="singup.html">Entrar</a></button>
+                 <button class="btn-login" onclick="alerta(this)"><a href="">Entrar</a></button>
                  <p class="text-singup">Ainda não tem uma conta? <a href="singup.html">Cadastre-se</a> agora!</p>
             </div>
         </div>
